// message_envelope.proto
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.test.grpc";
option java_outer_classname = "EnvelopeProto";

package messaging;

// Message envelope for wrapping payloads with metadata
message Envelope {
    string message_id = 1;
    string timestamp = 2;
    string type = 3;
    bytes payload = 4;
    string version = 5;
    string source = 6;
}

// Service definition for message handling
service EnvelopeService {
    // Send a message
    rpc SendMessage (Envelope) returns (Response) {}

    // Stream messages
    rpc StreamMessages (Request) returns (stream Envelope) {}
}

// Request message for initiating message streaming
message Request {
    string filter_type = 1;
    string source_filter = 2;
}

// Response message for send operation
message Response {
    string status = 1;
    string message = 2;
}